2001-04-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c:
	* fvwm/misc.c (UngrabEm):
	(GrabEm):
	* fvwm/icons.c (Iconify):
	* fvwm/add_window.c (destroy_window):
	* fvwm/events.c (HandleUnmapNotify):
	removed all of the code dealing with the old Scr.PreviousFocus window
	which was essentially a no-op with a host of unwanted side effects.
	The idea was to suppress the EnterNotify and LeaveNotify events caused
	by grabbing and ungrabbing the pointer by transferring the focus to
	Scr.NoFocusWin before grabbing and restoring it afterwards.  But of
	course the focus has no effent on Enter/LeaveNotify events, only on
	FocusIn/FocusOut events which are not generated by grabbing or
	ungrabbing the pointer.

	* fvwm/misc.c (GrabEm):
	(UngrabEm):
	transfer focus to Scr.NoFocusWin for GRAB_BUSY also

	* fvwm/events.c (HandleEnterNotify):
	(HandleLeaveNotify):
	fixed Prev command with MosueFocus or SloppyFocus

	* fvwm/focus.c (clear_focus_window):
	new function

	* fvwm/events.c (HandlePropertyNotify):
	small focus handling fix

	* fvwm/focus.c (FocusOn):
	a little clean up

	* fvwm/misc.c (GrabEm):
	safety patch

	* fvwm/focus.c (set_focus_window):
	(restore_prevfocus_window):
	(DoSetFocus):
	(restore_focus_after_unmap):
	fixed window list order

	* fvwm/conditional.c (Circulate):
	cleaned up

	* **/.cvsignore:
	added gmon.out

2001-04-06  Dan Espen  <dane@mk.telcordia.com>

	* sample.fvwmrc/DecorMwm:
	* sample.fvwmrc/DecorWin95: Use one decor, remove DestroyDecor.

2001-04-07  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/menus (scanForHotkeys):
	don't set hotkey if a string after a mark is empty, this fixes the
	core dump later in draw_underline()

	* fvwm/fvwm2.1:
	use bold instead of quotes in "initialization functions" section

2001-04-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (CMD_Maximize):
	fixed maximize - move - maximize on pages other than 0 0

	* fvwm/module_interface.c (make_named_packet):
	(make_vpacket):