@@ -18,7 +18,6 @@
 
 void ApplyDefaultFontAndColors(void);
 void InitFvwmDecor(FvwmDecor *decor);
-void DestroyFvwmDecor(FvwmDecor *decor);
 void reset_decor_changes(void);
 Bool ReadDecorFace(char *s, DecorFace *df, int button, int verbose);
 void FreeDecorFace(Display *dpy, DecorFace *df);
