@@ -1,3 +1,8 @@
+2001-04-07  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* purify/purify.fvwm2rc:
+	added DestroyDecor recreate tests
+
 2001-04-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* purify/purify.fvwm2rc:
