@@ -1,5 +1,13 @@
 2001-04-07  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* sample.fvwmrc/DecorWin95:
+	* sample.fvwmrc/DecorMwm:
+	add "Destroydecor recreate DecorBase"
+
+	* fvwm/builtins.c (DestroyFvwmDecor):
+	(CMD_DestroyDecor):
+	added the recreate option to the DestroyDecor command
+
 	* fvwm/focus.c:
 	* fvwm/misc.c (UngrabEm):
 	(GrabEm):
